--- a/templates/views/admin/inventory/warehouse.hbs
+++ b/templates/views/admin/inventory/warehouse.hbs
@@ -200,6 +200,14 @@
         border: 2px solid #26ABE2;
     }
 
+    .top-header-end .filter .dropdown-menu {
+        position: absolute;
+        transform: translate3d(-90px, 28px, 0px);
+        top: 0px;
+        left: -42px!important;
+        will-change: transform;
+    }
+
     .stock-status-in {
         padding: 1px 5px;
         border-radius: 5px;
@@ -319,12 +327,50 @@
             width: 100%;
         }
     }
+
+    /* reports */
+    .reports .report {
+        background-color: #fff;
+        padding: 1em;
+        border-radius: 10px;
+        width: auto;
+        transition: all 0.1s ease-in-out;
+    }
+
+    /*.reports .report:hover {
+        background-color: #26ABE2;
+    }
+    .reports .report:hover h2,.reports .report:hover h6{
+        color: #fff !important;
+    }*/
+
+    .reports .report h6 {
+        color: #8b8b8b;
+    }
+
+    .reports .report:nth-child(1) h2 {
+        color: #3eb940;
+    }
+
+    .reports .report:nth-child(2) h2 {
+        color: #ae92e5;
+    }
+
+    .reports .report:nth-child(3) h2 {
+        color: #dd7288;
+    }
+
+    @media (max-width:768px){
+        .reports .report{
+            width: 100%;
+        }
+    }
 </style>
 {{/style}}
 {{#*inline "body"}}
 <div class="container-fluid px-md-5 mt-3">
     <div class="row">
-        <div class="col-12 py-1 d-flex justify-content-between" style="overflow:hidden;">
+        <div class="col-12 py-1 d-flex justify-content-between">
             <div class="top-header-filter">
                 <span class="font-weight-bold me-2">Find </span>
                 <span class="cursor-pointer user-select-none new-design-button active" data-filter="inventory"
@@ -344,21 +390,59 @@
                 </script>
             </div>
             <div class="top-header-middle">
-                <span class="cursor-pointer new-design-button reports">Reports<i
-                        class="bi bi-chevron-double-down ms-2"></i></span>
+                <span class="cursor-pointer new-design-button reports-tab user-select-none"
+                    onclick="openReportSection()">Reports
+                    <i class="bi bi-chevron-double-down ms-2"></i></span>
             </div>
-            <div>
+            <script>
+                function openReportSection() {
+                    $('.reports').fadeToggle(100)
+                    if ($('.reports-tab').html() == 'Close<i class="bi bi-x ms-2"></i>') {
+                        $('.reports-tab').html('Reports<i class="bi bi-chevron-double-down ms-2"></i>')
+                    } else {
+                        $('.reports-tab').html('Close<i class="bi bi-x ms-2"></i>')
+                    }
+                }
+            </script>
+            <div class="d-md-flex top-header-end d-none">
                 <span class="cursor-pointer new-design-button mx-1">Download Report <i
                         class="bi bi-cloud-download ms-1"></i></span>
-                <span class="cursor-pointer new-design-button mx-1">Filter <i
-                        class="bi bi-chevron-down ms-1"></i></span>
+                {{!-- <span class="cursor-pointer  mx-1 ">Filter <i class="bi bi-chevron-down ms-1"></i></span> --}}
+                <div class="dropdown filter" style="position: relative;">
+                    <button class="btn new-design-button mx-1 shadow-none" type="button" id="dropdownMenuButton"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Sort by <i class="bi bi-chevron-down ms-1"></i>
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="javascript:void(0)">Name</a>
+                        <a class="dropdown-item" href="javascript:void(0)">Category</a>
+                        <a class="dropdown-item" href="javascript:void(0)">Rate</a>
+                        <a class="dropdown-item" href="javascript:void(0)">Stock</a>
+                        <a class="dropdown-item" href="javascript:void(0)">Quantity</a>
+                        <a class="dropdown-item" href="javascript:void(0)">Value</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-
 </div>
-
 <div class="container-fluid px-md-4 mb-5 pb-5" style="position: relative;">
+    <div class="row reports my-3" style="display: none;">
+        <div class="col d-flex justify-content-center flex-wrap">
+            <div class="report total-stock-value mx-md-5 mx-2 my-md-0 my-2">
+                <h2></h2>
+                <h6>Total stock</h6>
+            </div>
+            <div class="report total-out-of-stock mx-md-5 mx-2 my-md-0 my-2">
+                <h2></h2>
+                <h6>Out of stock</h6>
+            </div>
+            <div class="report total-in-stock mx-md-5 mx-2 my-md-0 my-2">
+                <h2></h2>
+                <h6>In stock</h6>
+            </div>
+        </div>
+    </div>
     <div class="row warehouse-table-container">
         <div class="col">
             <table class="mt-3">
@@ -416,18 +500,21 @@
             <div class="col-12 py-4" style="border-top: 1px solid #cccccc;">
                 <h5 class="d-flex justify-content-between align-items-center">
                     <span> Stock history</span>
+
                     <select class="form-select filterStockHistory" style="width: 10em;">
                         <option value="all">All</option>
                         <option value="last-month">Last Month</option>
+                        <option value="custom">custom</option>
                     </select>
                     <script>
                         function filterStockHistory(arr) {
+                            filteredArr = arr
                             select = $('.inventary-product-details .filterStockHistory').val()
                             if (select != "all") {
-                                filteredArr = filterArrDate(-30, 0, arr)
-
-                            } else {
-                                filteredArr = arr
+                                temp = moment().subtract(30, 'days').calendar().split('/')
+                                from = `${temp[2]}-${temp[0]}-${temp[1]}`;
+                                to = moment().format('YYYY-MM-DD')
+                                filteredArr = filterArrDate(from, to, arr)
                             }
                             $('.inventary-product-details .stock-history.list-group').html('')
                             printStockHistory(filteredArr, ".inventary-product-details .stock-history.list-group")
@@ -689,17 +776,11 @@
 </div>
 {{/inline}}
 {{#*inline "css"}}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://jquery.app/jqueryscripttop.css">
 <link rel="stylesheet"
     href="https://www.jqueryscript.net/demo/Easy-Searchable-Filterable-Select-List-with-jQuery/jquery.searchableSelect.css">
 <script
     src="https://www.jqueryscript.net/demo/Easy-Searchable-Filterable-Select-List-with-jQuery/jquery.searchableSelect.js"></script>
-
 {{/inline}}
 {{#*inline "script"}}
 <script>
